--- a/vue/src/assets/lms-scss/_variable.scss
+++ b/vue/src/assets/lms-scss/_variable.scss
@@ -24,6 +24,6 @@ $cl3: #f7f7f7;
 // ── Common ──
 $headerH: 5.8rem;
 $ratio100: 100%;
-$url: '../lms-img/';
+$url: '@/assets/lms-img/';
 $size: (1rem, 2rem, 3rem, 4rem, 5rem, 6rem, 7rem, 8rem, 9rem, 10rem );
 
