--- a/vue/src/assets/lms-scss/common.scss
+++ b/vue/src/assets/lms-scss/common.scss
@@ -64,11 +64,13 @@ $font-path: '../lms-font/';
 // Base styles
 html {
   font-size: 10px;
-  height: 100%;
+  height: 100%;  
 }
 
 body {
   height: 100%;
+  width:100%;
+  min-width: 38rem;
   overflow: auto;
   font: 400 1.6rem/1 "Pretendard";
 }
@@ -87,7 +89,7 @@ body * {
 }
 
 main .inner {
-  max-width: 140rem;
+  max-width: 140rem;  
 }
 
 // Utility classes
